--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "bcrypt-nodejs": "0.0.3",
     "concurrently": "^3.6.0",
     "cookie-parser": "~1.4.3",
+    "csv-export": "^1.0.2",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "mongoose": "^5.2.1",
     "morgan": "~1.9.0",
     "muicss": "^0.9.39",
+    "passport": "^0.4.0",
     "pug": "2.0.0-beta11",
     "react-modal": "^3.5.1",
     "react-responsive-modal": "^3.1.0"
